# mmbot

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TASKS.md  docker-compose.yml  justfile
.github/workflows/: test.yml
examples/hello_thread_bot/: Cargo.toml
examples/hello_thread_bot/src/: main.rs
examples/support_bot/: Cargo.toml  README.md  TOOL_AUTHORING_GUIDE.md
examples/support_bot/authoring/: IMPLEMENTATION_CHECKLIST.md  INITIALIZATION_AND_RUNTIME.md  KNOWLEDGE_BASE.md  TOOL_AUTHORING.md
examples/support_bot/instructions/: index.md  manifest.yaml
examples/support_bot/instructions/diagnostics/: README.md  index.md  timeout.md
examples/support_bot/instructions/logs/: README.md  index.md  search.md
examples/support_bot/src/: main.rs
lib/bool_parser/: Cargo.toml
lib/bool_parser/src/: lib.rs
lib/mattermost-api/: Cargo.toml  README.md
lib/mattermost-api/.openapi-generator/: FILES
lib/mattermost-api/docs/: AcceptRemoteClusterInviteRequest.md  AddChannelMemberRequest.md  AddChecklistItemRequest.md  AllowedIpRange.md  AttachDeviceExtraPropsRequest.md  AuthenticationApi.md  BleveApi.md  BookmarksApi.md  BotsApi.md  BrandApi.md  ChangeOwnerRequest.md  Channel.md  ChannelBookmark.md  ChannelBookmarkWithFileInfo.md  ChannelData.md  ChannelMember.md  ChannelMemberCountByGroup.md  ChannelMemberWithTeamData.md  ChannelModeratedRoles.md  ChannelModeration.md  ChannelModerationPatch.md  ChannelWithTeamData.md  ChannelsApi.md  Checklist.md  ChecklistItem.md  CloudApi.md  CloudCustomer.md  ClusterApi.md  ClusterInfoInner.md  CommandResponse.md  CommandsApi.md  ComplianceApi.md  Config.md  ConvertBotToUserRequest.md  CreateChannelBookmarkRequest.md  CreateGroupRequest.md  CreatePlaybook201Response.md  CreatePlaybookRequest.md  CreatePlaybookRequestChecklistsInner.md  CreatePlaybookRequestChecklistsInnerItemsInner.md  (+141 more)
lib/mattermost-api/src/: lib.rs
lib/mattermost-api/src/apis/: authentication_api.rs  bleve_api.rs  bookmarks_api.rs  bots_api.rs  brand_api.rs  channels_api.rs  cloud_api.rs  cluster_api.rs  commands_api.rs  compliance_api.rs  configuration.rs  data_retention_api.rs  default_api.rs  elasticsearch_api.rs  emoji_api.rs  exports_api.rs  files_api.rs  filtering_api.rs  groups_api.rs  imports_api.rs  integration_actions_api.rs  internal_api.rs  ip_api.rs  jobs_api.rs  ldap_0_api.rs  ldap_api.rs  logs_api.rs  migrate_api.rs  mod.rs  o_auth_api.rs  oauth_0_api.rs  outgoing_connections_api.rs  outgoing_oauth_connections_api.rs  permissions_api.rs  playbook_autofollows_api.rs  playbook_runs_api.rs  playbooks_api.rs  plugins_api.rs  posts_api.rs  preferences_api.rs  (+19 more)
lib/mattermost-api/src/models/: accept_remote_cluster_invite_request.rs  add_channel_member_request.rs  add_checklist_item_request.rs  add_group_members_request.rs  add_on.rs  add_team_member_request.rs  address.rs  allowed_ip_range.rs  app_error.rs  attach_device_extra_props_request.rs  audit.rs  autocomplete_suggestion.rs  boards_limits.rs  bot.rs  change_owner_request.rs  channel.rs  channel_bookmark.rs  channel_bookmark_with_file_info.rs  channel_data.rs  channel_member.rs  channel_member_count_by_group.rs  channel_member_with_team_data.rs  channel_moderated_role.rs  channel_moderated_roles.rs  channel_moderated_roles_patch.rs  channel_moderation.rs  channel_moderation_patch.rs  channel_notify_props.rs  channel_stats.rs  channel_unread.rs  channel_unread_at.rs  channel_with_team_data.rs  check_user_mfa_200_response.rs  check_user_mfa_request.rs  checklist.rs  checklist_item.rs  cloud_customer.rs  cluster_info_inner.rs  command.rs  command_response.rs  (+302 more)
lib/mattermost-bot/: Cargo.toml
lib/mattermost-bot/src/: error.rs  lib.rs  metrics.rs  nested_decoder.rs  plugin.rs  types.rs
lib/mattermost-bot/src/middlewares/: ignore_self.rs  mod.rs
lib/mattermost-bot/tests/: README.md  docker-compose.yml  integration_tests.rs  lifecycle_tests.rs  middleware_tests.rs
lib/mattermost-bot/tests/common/: mod.rs
lib/mattermost-test-helpers/: Cargo.toml
lib/mattermost-test-helpers/src/: client.rs  env.rs  lib.rs
lib/support-bot/: Cargo.toml  README.md
lib/support-bot/docs/: instructions.md
lib/support-bot/src/: admission.rs  builder.rs  config.rs  conversation.rs  debug.rs  debug_export.rs  error.rs  handler.rs  instructions.rs  lib.rs  llm.rs  metadata.rs  metrics.rs  notifier.rs  output.rs  remote_mcp.rs  state.rs  testutil.rs  tools.rs  user_thread_run.rs  workflow.rs
lib/support-bot/src/handler/: user_workflow.rs
lib/support-bot/src/instructions/: frontmatter.rs  lint.rs  mod.rs  repository.rs  tool.rs
lib/support-bot/src/tests/: admission.rs  builder.rs  debug.rs  handler.rs  llm.rs  metadata.rs  metrics.rs  notifier.rs  output.rs  remote_mcp.rs  state.rs  tools.rs
lib/support-bot/src/tests/handler/: control_reactions.rs  debug_report.rs  engineer_thread.rs  mod.rs  routing.rs  user_workflow.rs
lib/support-bot/src/tests/instructions/: frontmatter.rs  lint.rs  repository.rs
lib/thread-bot/: Cargo.toml
lib/thread-bot/migrations/: 20260408_001_initial.sql
lib/thread-bot/src/: actor.rs  actor_registry.rs  actor_tests.rs  channel_messages.rs  error.rs  handle.rs  handler.rs  lib.rs  metrics.rs  pg_store.rs  runtime.rs  store.rs  testutil.rs  types.rs
lib/thread-bot/tests/: pg_store_tests.rs
lib/thread-bot/tests/common/: mod.rs
mmbot/: Cargo.toml
mmbot/src/: main.rs
notes/: generate_mm_api.md  openapi.json  support-bot-dashboard.json  support-bot-dashboard.md  support-bot-progress-2026-05-03.md  support-bot-refactor-review-2026-05-10.md  support-bot-review-2026-05-03.md  support-bot-review-2026-05-05.md  thread-bot-review-2026-05-10.md  thread-bot-rfc-0007-implementation.md
rfcs/: 0001-storage-persistence.md  0002-thread-bot-architecture.md  0003-thread-bot-cron-access.md  0004-support-bot-layer.md  0005-observability-metrics.md  0006-markdown-instruction-repository.md  0007-passive-thread-effects.md
