[workspace]

members = [
    "mmbot",
    "lib/mattermost-api",
    "lib/bool_parser",
    "lib/mattermost-bot",
    "lib/thread-bot"
]

[workspace.dependencies]
tokio = "1.41.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
async-trait = "0.1.83"
reqwest = "0.12"

# Test dependencies
testcontainers = "0.23"
testcontainers-modules = "0.11"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.11", features = ["v4"] }
test-log = "0.2"

mattermost_api = { path = "lib/mattermost-api" }
mattermost_bot = { path = "lib/mattermost-bot" }
bool_parser = { path = "lib/bool_parser" }
