[package]
name = "mmrag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
openai-api-rs = "5.0.13"
tokio = "1.41.0"
reqwest = { version = "0.12.12", features = ["json"] }
typify = "0.3.0"
surrealdb = { version = "2.0.4", features = ["kv-surrealkv"] }

mattermost_api = { workspace = true }
mattermost_bot = { workspace = true }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"