[package]
name = "support-bot-example"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio-graceful = "0.2"

thread-bot = { path = "../../lib/thread-bot" }
support-bot = { path = "../../lib/support-bot" }
mattermost_bot = { path = "../../lib/mattermost-bot" }
mattermost_api = { path = "../../lib/mattermost-api" }
