[package]
name = "mattermost_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures-util = "0.3.31"
reqwest-websocket = "0.4.3"
mattermost_api = { workspace = true }
