[package]
name = "support-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = "2"
thread-bot = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
