[package]
name = "thread-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
mattermost_api = { path = "../mattermost-api" }
mattermost_bot = { path = "../mattermost-bot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
testcontainers = "0.23"
uuid = { version = "1", features = ["v4"] }
