[package]
name = "thread-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
mattermost_api = { path = "../mattermost-api" }
mattermost_bot = { path = "../mattermost-bot" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "json", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
mattermost_bot = { path = "../mattermost-bot" }
anyhow = "1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
test-log = "0.2"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
uuid = { version = "1", features = ["v4"] }
wiremock = "0.6"
